--- a/package.json
+++ b/package.json
@@ -25,23 +25,23 @@
   "dependencies": {
     "@sap/abap-deploy": "0.10.27",
     "@sap/apihub-service-provider": "1.2.2",
-    "@sap/approuter": "10.10.2",
+    "@sap/approuter": "10.10.4",
     "@sap/artifact-management": "1.2.0",
     "@sap/artifact-management-base": "1.2.0",
     "@sap/artifact-management-base-types": "1.2.0",
     "@sap/artifact-management-types": "1.2.0",
-    "@sap/asp-middleware": "1.0.7",
+    "@sap/asp-middleware": "1.0.8",
     "@sap/audit-logging": "5.3.0",
     "@sap/bas-sdk-cf-utils": "1.2.0",
-    "@sap/cds": "5.7.2",
+    "@sap/cds": "5.7.3",
     "@sap/cds-compiler": "2.11.2",
-    "@sap/cds-dk": "4.7.1",
+    "@sap/cds-dk": "4.7.2",
     "@sap/cds-dk-foss": "1.0.2",
     "@sap/cds-foss": "3.0.0",
     "@sap/cds-hana": "1.25.2",
     "@sap/cds-lsp": "5.4.0",
     "@sap/cds-messaging": "1.8.3",
-    "@sap/cds-mtx": "2.5.0",
+    "@sap/cds-mtx": "2.5.1",
     "@sap/cds-odata-v2-adapter-proxy": "1.8.4",
     "@sap/cds-ql": "1.21.2",
     "@sap/cds-reflect": "2.13.5",
@@ -98,13 +98,14 @@
     "@sap/cloud-sdk-op-vdm-condition-contract-service": "1.28.2",
     "@sap/cloud-sdk-op-vdm-condition-contract-type-service": "1.28.2",
     "@sap/cloud-sdk-op-vdm-condition-exclusion-for-pricing-in-sales-service": "1.28.2",
+    "@sap/cloud-sdk-op-vdm-condition-table-for-pricing-in-sales-service": "1.28.2",
     "@sap/cloud-sdk-op-vdm-contract-account-service": "1.28.2",
     "@sap/cloud-sdk-op-vdm-contract-accounting-business-partner-invoice-service": "1.28.2",
     "@sap/cloud-sdk-op-vdm-contract-accounting-business-partner-payment-manage-service": "1.28.2",
     "@sap/cloud-sdk-op-vdm-contract-accounting-business-transaction-service": "1.28.2",
     "@sap/cloud-sdk-op-vdm-contract-accounting-creditworthiness-service": "1.28.2",
     "@sap/cloud-sdk-op-vdm-contract-accounting-dispute-case-service": "1.28.2",
-    "@sap/cloud-sdk-op-vdm-contract-accounting-document-manage-service": "1.28.2",
+    "@sap/cloud-sdk-op-vdm-contract-accounting-sepa-mandate-service": "1.28.2",
     "@sap/cloud-sdk-op-vdm-controlling-area-service": "1.28.2",
     "@sap/cloud-sdk-op-vdm-controlling-debit-credit-code-service": "1.28.2",
     "@sap/cloud-sdk-op-vdm-cost-center-activity-type-service": "1.28.2",
@@ -338,6 +339,7 @@
     "@sap/cloud-sdk-vdm-change-master-v2-service": "1.28.2",
     "@sap/cloud-sdk-vdm-change-record-service": "1.28.2",
     "@sap/cloud-sdk-vdm-characteristic-attribute-catalog-service": "1.28.2",
+    "@sap/cloud-sdk-vdm-characteristic-data-for-classification-service": "1.28.2",
     "@sap/cloud-sdk-vdm-chart-of-accounts-service": "1.28.2",
     "@sap/cloud-sdk-vdm-class-data-for-classification-service": "1.28.2",
     "@sap/cloud-sdk-vdm-cloud-print-pull-service": "1.28.2",
@@ -466,7 +468,6 @@
     "@sap/cloud-sdk-vdm-measuring-point-service": "1.28.2",
     "@sap/cloud-sdk-vdm-mrp-change-request-priority-service": "1.28.2",
     "@sap/cloud-sdk-vdm-mrp-change-request-reason-service": "1.28.2",
-    "@sap/cloud-sdk-vdm-mrp-change-request-rejection-service": "1.28.2",
     "@sap/cloud-sdk-vdm-object-dependency-service": "1.28.2",
     "@sap/cloud-sdk-vdm-order-bill-of-material-service": "1.28.2",
     "@sap/cloud-sdk-vdm-outbound-delivery-service": "1.28.2",
@@ -487,6 +488,7 @@
     "@sap/cloud-sdk-vdm-planning-category-service": "1.28.2",
     "@sap/cloud-sdk-vdm-pooled-capacity-service": "1.28.2",
     "@sap/cloud-sdk-vdm-process-order-confirmation-service": "1.19.2",
+    "@sap/cloud-sdk-vdm-process-order-confirmation-v2-service": "1.28.2",
     "@sap/cloud-sdk-vdm-process-order-v2-service": "1.28.2",
     "@sap/cloud-sdk-vdm-process-orders-service": "1.28.2",
     "@sap/cloud-sdk-vdm-process-warehouse-tasks-service": "1.28.2",
@@ -576,6 +578,7 @@
     "@sap/cloud-sdk-vdm-subsequent-billing-document-service": "1.28.2",
     "@sap/cloud-sdk-vdm-substance-volumes-service": "1.28.2",
     "@sap/cloud-sdk-vdm-supplier-activity-service": "1.28.2",
+    "@sap/cloud-sdk-vdm-supplier-activity-task-service": "1.28.2",
     "@sap/cloud-sdk-vdm-supplier-evaluation-response-service": "1.28.2",
     "@sap/cloud-sdk-vdm-supplier-evaluation-score-service": "1.28.2",
     "@sap/cloud-sdk-vdm-supplier-evaluation-scorecard-service": "1.28.2",
@@ -611,7 +614,7 @@
     "@sap/cloud-sdk-workflow-service-cf": "1.28.2",
     "@sap/consume-services": "1.7.14",
     "@sap/consume-services-types": "0.3.11",
-    "@sap/create-hana-database-artifact": "1.6.0",
+    "@sap/create-hana-database-artifact": "1.7.0",
     "@sap/destination-instance-service-provider": "1.2.5",
     "@sap/destinations": "0.2.1",
     "@sap/di.code-validation.core": "1.0.17",
@@ -640,30 +643,30 @@
     "@sap/generator-base-mta-module": "1.3.7",
     "@sap/generator-cap-project": "1.6.0",
     "@sap/generator-cds": "2.17.7",
-    "@sap/generator-fiori": "1.4.4",
+    "@sap/generator-fiori": "1.4.5",
     "@sap/generator-fiori-elements": "1.1.9",
     "@sap/generator-fiori-freestyle": "1.1.9",
     "@sap/generator-hdb-project": "1.3.0",
-    "@sap/graph-toolkit": "3.0.0",
+    "@sap/graph-toolkit": "3.0.3",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.13",
     "@sap/grunt-sapui5-bestpractice-test": "2.0.4",
     "@sap/grunt-sapui5module-bestpractice-build": "1.0.9",
     "@sap/grunt-tests-webide-bestpractice": "0.0.15",
-    "@sap/hana-client": "2.10.20",
+    "@sap/hana-client": "2.11.14",
     "@sap/hana-database-explorer": "1.2.0",
-    "@sap/hana-eim-sditools-vscode": "1.0.6",
-    "@sap/hana-performance-tools": "1.2.26",
+    "@sap/hana-eim-sditools-vscode": "1.0.6-3",
+    "@sap/hana-performance-tools": "1.3.0",
     "@sap/hana-sqlscript-lsp": "1.5.0",
     "@sap/hana-theme-vscode": "1.0.0",
     "@sap/hana-tooling-feature-toggles": "1.0.0",
-    "@sap/hdbext": "7.4.1",
+    "@sap/hdbext": "7.5.0",
     "@sap/hdi": "4.1.0",
     "@sap/hdi-deploy": "4.2.3",
     "@sap/hdi-dynamic-deploy": "2.3.2",
-    "@sap/hrtt-core-vscode": "1.6.1",
+    "@sap/hrtt-core-vscode": "1.7.0",
     "@sap/html5-app-deployer": "3.2.0",
     "@sap/html5-repo-mock": "2.1.0",
-    "@sap/instance-manager": "3.0.0",
+    "@sap/instance-manager": "3.1.0",
     "@sap/jobs-client": "1.6.3",
     "@sap/logger-for-bas-extensions": "1.1.0",
     "@sap/logging": "6.0.3",
@@ -695,24 +698,24 @@
     "@sap/ui-annotations": "2.0.5",
     "@sap/ui5-builder-webide-extension": "1.1.7",
     "@sap/ux-cds-odata-language-server-extension": "1.4.4",
-    "@sap/ux-specification": "1.90.15",
+    "@sap/ux-specification": "1.96.0",
     "@sap/ux-ui5-fe-mockserver-middleware": "1.4.7",
     "@sap/ux-ui5-tooling": "1.4.4",
     "@sap/vscode-cds": "4.4.0",
-    "@sap/webide-hdi-base-feature-vscode": "1.5.0",
-    "@sap/webide-hdi-feature-vscode": "1.6.0",
+    "@sap/webide-hdi-base-feature-vscode": "1.6.0",
+    "@sap/webide-hdi-feature-vscode": "1.7.0",
     "@sap/wing-run-config-types": "4.2.0",
     "@sap/wing-service-binding": "1.10.2",
     "@sap/wing-service-explorer": "1.7.2",
     "@sap/xb-msg": "0.9.12",
     "@sap/xb-msg-amqp-v091": "0.9.12",
-    "@sap/xb-msg-amqp-v100": "0.9.56",
+    "@sap/xb-msg-amqp-v100": "0.9.58",
     "@sap/xb-msg-env": "0.9.8",
-    "@sap/xb-msg-mqtt-v311": "0.9.16",
+    "@sap/xb-msg-mqtt-v311": "0.9.17",
     "@sap/xsenv": "3.1.1",
-    "@sap/xsjs": "6.4.1",
+    "@sap/xsjs": "6.5.0",
     "@sap/xsjs-test": "3.2.2",
-    "@sap/xsodata": "7.4.4",
+    "@sap/xsodata": "7.4.5",
     "@sap/xss-secure": "4.0.0",
     "@sap/xssec": "3.2.11"
   }
