--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
   "dependencies": {
     "@sap/abap-deploy": "0.10.27",
     "@sap/apihub-service-provider": "1.2.2",
-    "@sap/approuter": "10.12.0",
-    "@sap/artifact-management": "1.6.1",
-    "@sap/artifact-management-base": "1.6.1",
-    "@sap/artifact-management-base-types": "1.6.1",
-    "@sap/artifact-management-types": "1.6.1",
+    "@sap/approuter": "10.13.1",
+    "@sap/artifact-management": "1.7.0",
+    "@sap/artifact-management-base": "1.7.0",
+    "@sap/artifact-management-base-types": "1.7.0",
+    "@sap/artifact-management-types": "1.7.0",
     "@sap/asp-middleware": "1.0.8",
-    "@sap/audit-logging": "5.5.0",
+    "@sap/audit-logging": "5.5.1",
     "@sap/bas-sdk-cf-utils": "1.2.0",
-    "@sap/cds": "5.8.1",
+    "@sap/cds": "5.8.3",
     "@sap/cds-compiler": "2.12.0",
     "@sap/cds-dk": "4.8.1",
     "@sap/cds-dk-foss": "1.0.2",
@@ -42,7 +42,7 @@
     "@sap/cds-lsp": "5.5.3",
     "@sap/cds-messaging": "1.8.3",
     "@sap/cds-mtx": "2.5.2",
-    "@sap/cds-odata-v2-adapter-proxy": "1.8.9",
+    "@sap/cds-odata-v2-adapter-proxy": "1.8.10",
     "@sap/cds-ql": "1.21.2",
     "@sap/cds-reflect": "2.13.5",
     "@sap/cds-rest": "1.6.3",
@@ -132,6 +132,7 @@
     "@sap/cloud-sdk-op-vdm-defect-class-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-defect-code-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-defect-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-delivery-document-with-credit-block-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-detection-method-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-distribution-channel-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-division-service": "2.0.0",
@@ -197,6 +198,7 @@
     "@sap/cloud-sdk-op-vdm-order-bill-of-material-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-outbound-delivery-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-packing-instruction-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-partner-company-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-payment-advice-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-personnel-settlement-document-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-phase-relationship-type-service": "2.0.0",
@@ -209,14 +211,19 @@
     "@sap/cloud-sdk-op-vdm-product-allocation-object-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-product-allocation-sequence-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-product-availability-info-basic-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-product-group-data-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-product-group-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-product-master-data-including-classification-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-product-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-product-specification-composition-configuration-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-product-specification-property-configuration-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-product-specification-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-product-substitution-control-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-product-substitution-exclusion-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-product-substitution-group-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-product-substitution-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-product-time-dependent-stock-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-product-type-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-production-order-confirmation-v2-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-production-order-v2-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-production-routing-service": "2.0.0",
@@ -226,7 +233,6 @@
     "@sap/cloud-sdk-op-vdm-project-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-purchase-contract-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-purchase-order-service": "2.0.0",
-    "@sap/cloud-sdk-op-vdm-purchase-requisition-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-purchasing-info-record-process-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-purchasing-pricing-condition-record-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-purchasing-pricing-condition-type-service": "2.0.0",
@@ -239,6 +245,7 @@
     "@sap/cloud-sdk-op-vdm-real-estate-contract-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-real-estate-contract-type-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-real-estate-integration-object-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-real-estate-space-group-enable-use-type-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-recipe-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-repetitive-manufacturing-confirmation-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-report-ehs-incident-service": "2.0.0",
@@ -291,6 +298,7 @@
     "@sap/cloud-sdk-op-vdm-task-code-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-task-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-time-dependent-stock-level-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-treasury-position-flow-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-treasury-posting-journal-entry-line-item-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-variant-table-content-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-vehicle-location-service": "2.0.0",
@@ -680,6 +688,8 @@
     "@sap/fibers": "5.0.0-0",
     "@sap/fibrous": "0.5.0-6",
     "@sap/fiori-json-services": "1.0.1",
+    "@sap/generator-adaptation-project": "0.2.10",
+    "@sap/generator-adaptation-project-deployment": "0.0.21",
     "@sap/generator-add-hdb-module": "1.3.0",
     "@sap/generator-base-mta-module": "1.3.7",
     "@sap/generator-cap-project": "1.6.0",
@@ -698,14 +708,14 @@
     "@sap/hana-sqlscript-lsp": "1.5.0",
     "@sap/hana-theme-vscode": "1.0.0",
     "@sap/hana-tooling-feature-toggles": "1.0.1",
-    "@sap/hdbext": "7.6.0",
+    "@sap/hdbext": "7.6.2",
     "@sap/hdi": "4.2.0",
-    "@sap/hdi-deploy": "4.2.3",
-    "@sap/hdi-dynamic-deploy": "2.3.2",
+    "@sap/hdi-deploy": "4.3.0",
+    "@sap/hdi-dynamic-deploy": "2.3.3",
     "@sap/hrtt-core-vscode": "1.8.0",
     "@sap/html5-app-deployer": "3.2.0",
     "@sap/html5-repo-mock": "2.1.0",
-    "@sap/instance-manager": "3.3.0",
+    "@sap/instance-manager": "3.3.1",
     "@sap/jobs-client": "1.6.3",
     "@sap/logger-for-bas-extensions": "1.1.0",
     "@sap/logging": "6.1.0",
@@ -718,7 +728,7 @@
     "@sap/odata-server": "1.8.3",
     "@sap/odata-v4": "1.9.0",
     "@sap/odm": "2.0.0",
-    "@sap/open.fe": "1.98.0",
+    "@sap/open.fe": "1.99.0",
     "@sap/pdms-sdk": "1.0.0",
     "@sap/portal-cf-content-deployer": "4.20.0-20220206072628",
     "@sap/sbf": "6.4.4",
@@ -736,6 +746,7 @@
     "@sap/textmining": "1.1.6",
     "@sap/ui-annotations": "2.0.5",
     "@sap/ui5-builder-webide-extension": "1.1.7",
+    "@sap/ui5-visual-editor": "1.1.14",
     "@sap/ux-cds-odata-language-server-extension": "1.5.0",
     "@sap/ux-specification": "1.96.4",
     "@sap/ux-ui5-fe-mockserver-middleware": "1.5.0",
@@ -752,7 +763,7 @@
     "@sap/xb-msg-env": "0.9.8",
     "@sap/xb-msg-mqtt-v311": "0.9.17",
     "@sap/xsenv": "3.2.0",
-    "@sap/xsjs": "6.5.1",
+    "@sap/xsjs": "6.5.2",
     "@sap/xsjs-test": "3.2.2",
     "@sap/xsodata": "7.4.5",
     "@sap/xss-secure": "4.1.0",
